--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div id="app">
-  <h1>{{ userName }}</h1>
-  <div>
-    <input class="userNameInput" type="text" placeholder="이름" #userNameInput (keyup)="onKeyUp(userNameInput.value)">
-    <button type="submit" (click)="setName(userNameInput.value)">제출</button>
-  </div>
-</div>
+<h1>다국어 환영 인사 서비스</h1>
+<app-welcome-msg></app-welcome-msg>
+<app-lang-selector></app-lang-selector>
