--- a/multilanguage-welcome-msg/src/app/lang-selector/lang-selector.component.css
+++ b/multilanguage-welcome-msg/src/app/lang-selector/lang-selector.component.css
@@ -1,11 +1,3 @@
-.lang-box {
-  width: 8%;
-  display: inline-block;
-  margin: 10px 15px;
-}
-
-.lang-box img {
-  width: 120px;
-  height: 80px;
-  border: 1px solid darkblue;
+img {
+  width: 1rem;
 }
