--- a/multilanguage-welcome-msg/src/app/lang-selector/lang-selector.component.html
+++ b/multilanguage-welcome-msg/src/app/lang-selector/lang-selector.component.html
@@ -1,9 +1,8 @@
-<div id="lang-select">
-  <div class="lang-box" *ngFor="let lang of langMetadata">
-    <img src="{{'/assets/img/' + lang.flagImgName}}">
-    <label *ngIf="langCode === lang.code">선택됨</label>
-    <button type="button" (click)="setLangCode(lang.code)" [disabled]="langCode === lang.code">
+<mat-card>
+  <mat-radio-group [(ngModel)]="langCode">
+    <mat-radio-button *ngFor="let lang of langMetadata" [value]="lang.code">
       {{lang | langSelectorBtn}}
-    </button>
-  </div>
-</div>
+      <img src="{{'/assets/img/' + lang.flagImgName}}">
+    </mat-radio-button>
+  </mat-radio-group>
+</mat-card>
