simple, service 예제

--- a/simple-experiments/src/app/app.component.html
+++ b/simple-experiments/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-ngif></app-ngif>
+<!-- <app-ngif></app-ngif>
 <app-ngfor></app-ngfor>
 <app-ngswitch></app-ngswitch>
-<app-pipe></app-pipe>
+<app-pipe></app-pipe> -->
+<app-service-ex></app-service-ex>
